--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <div class="title clr2">Surya Energy Indonesia (SURENDO)</div>
                 </div>
                 <div class="inner-content">
-                  <h2>PT. SURYA ENERGY INDONESIA GROUP</h2>
+                  <h2>SURYA ENERGY INDONESIA GROUP</h2>
                   <p>Kami menyediakan lampu Penerangan Jalan Umum (PJU) baik yang menggunakan listrik PLN maupun yang berasal dari pembangkit listrik tenaga surya (SOLAR CELL). Kami juga dapat menerima pesanan sesuai dengan bentuk, ukuran dan desain sesuai keinginan anda dan tentunya sesuai standar nasional Indonesia. Kami berdiri pada tahun 2008 di Kota Surabaya dan telah menghasilkan produk -produk andalan dalam negeri yang telah digunakan di seluruh pelosok tanah air. 
                     Terima kasih atas kunjungan anda.</p>
                   <div class="certificate">
