--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>PT. SURYA ENERGY INDONESIA GROUP</title>
+    <title>CV. SURYA ENERGY INDONESIA GROUP</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
